# github-notification-to-slack

./: Dockerfile  README.md  data.json  main.py  pyproject.toml  requirements.txt
github_notification_to_slack/: logger.py  settings.py
