[tool.poetry]
name = "github-notification-to-slack"
version = "0.1.0"
description = ""
authors = ["Julien Klaer <klaer.julien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
loguru = "^0.5.3"
gunicorn = "^20.1.0"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
